force-app/main/default/objects/Patient__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>FullName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>