force-app/main/default/objects/Patient__c/fields/Insurance_Info__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info__c</fullName>
    <label>Insurance Info</label>
    <type>TextArea</type>
</CustomField>