force-app/main/default/objects/Patient__c/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <formula>First_Name__c + &apos; &apos; + Name + &apos;, DOB: &apos; + TEXT(Date_Of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Field</label>
    <type>Text</type>
</CustomField>