force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FullName__c</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Date_Of_Birth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>